nginx configuration update

--- a/.config/uwsgi/finalTerm.ini
+++ b/.config/uwsgi/finalTerm.ini
@@ -6,7 +6,9 @@ home = /home/ubuntu/myvenv/
 uid = ubuntu
 gid = ubuntu
 
-http = :8080
+socket = /tmp/finalTerm.sock
+chmod-socket = 666
+chown-socket = ubuntu:ubuntu
 
 enable-threads = true
 master = true
@@ -14,4 +16,5 @@ vacuum = true
 pidfile = /tmp/finalTerm.pid
 logto = /var/log/uwsgi/finalTerm/@(exec://date +%%Y-%%m-%%d).log
 log-reopen = true
+
 
