--- a/.config/nginx/finalTerm.conf
+++ b/.config/nginx/finalTerm.conf
@@ -8,5 +8,9 @@ server{
 		uwsgi_pass unix:///tmp/finalTerm/sock;
 		inclue     uwsgi_params;
 	}
+
+	location /static/ {
+		alias /srv1/opensourceSW-django-deploy/static/;
+	}
 }
 
